<resources>
    <string name="app_name">Taboola sample</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="drawer_item_title_xml_sample">Xml Sample</string>
    <string name="drawer_item_title_dynamic_sample">Dynamic sample</string>
    <string name="drawer_item_title_configurable_page">Test page</string>

    <string name="config_button_text_reload">Reload widget</string>
    <string name="config_button_text_edit">Edit properties</string>

    <string name="alert_dialog_ok">Save</string>
    <string name="alert_dialog_cancel">Cancel</string>

    <string name="prompt_publisher">"publisher"</string>
    <string name="prompt_mode">"mode"</string>
    <string name="prompt_placement">"placement"</string>
    <string name="prompt_page_type">"page_type</string>
    <string name="prompt_target_type">"target_type"</string>
    <string name="prompt_page_url">"url"</string>
    <string name="prompt_referrer">"referrer"</string>
    <string name="prompt_article">article</string>
    <string name="prompt_scroll_enabled">scroll_enabled</string>
    <string name="prompt_auto_resize_height">auto_resize_height</string>
    <string name="prompt_item_click_enabled">item_click_enabled</string>

    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque at hendrerit odio, eget placerat velit. Proin risus dui, malesuada vitae interdum a, tincidunt id lectus. Sed consequat nisi tempus, venenatis nunc non, ornare lectus. Sed hendrerit dui nibh, suscipit vestibulum dui pharetra quis. Integer vitae elit arcu. Integer pretium a ligula interdum pharetra. Quisque sit amet augue et massa sagittis tempus et id libero. Curabitur neque mauris, elementum ut gravida id, venenatis vel arcu. Nam sed hendrerit mi.
        \n\n Integer interdum auctor sem, a dictum nisl porta in. Suspendisse gravida ultrices elementum. Nam sed egestas dui. Nunc quis mi pellentesque, vehicula leo at, auctor nunc. Vestibulum neque velit, vehicula at convallis sodales, cursus et magna. Praesent ut odio facilisis, faucibus arcu nec, laoreet enim. Donec dolor felis, elementum eu dictum ut, porttitor ut libero. Integer iaculis semper molestie. Aliquam feugiat id lacus sit amet molestie.
        \n\n Donec elementum lacinia libero, ut volutpat leo tincidunt a. Suspendisse potenti. Nulla facilisi. Donec vitae lorem hendrerit, fermentum erat eget, suscipit ex. Integer sodales massa ut risus finibus sodales. Cras fringilla enim ac scelerisque congue. Pellentesque gravida vitae velit eu pulvinar. Quisque magna mauris, viverra ut magna sed, scelerisque venenatis felis. Duis at nulla lectus. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Maecenas a sagittis urna.
        \n\n Maecenas id urna id magna mattis luctus. Nullam augue lacus, blandit in fermentum ac, blandit nec neque. Cras ut arcu luctus, blandit nunc ut, bibendum nisl. Aliquam euismod non sem imperdiet viverra. Cras non nisi nisl. Ut aliquet nisi vitae lectus pharetra, non blandit lacus hendrerit. Mauris mattis finibus pharetra. Ut eleifend velit in tincidunt placerat. Mauris elementum tincidunt sem, eu tincidunt mauris condimentum non. Aliquam tempus ornare ipsum, vel efficitur ex hendrerit ac. Suspendisse pharetra iaculis enim, vestibulum bibendum diam. Nulla non ex tempor, consequat tortor in, molestie diam. Nulla ut eleifend libero, non efficitur justo. Duis ut consequat lacus, a interdum urna. Suspendisse vel iaculis orci. Nulla aliquet purus vitae tempor condimentum.
        \n\n Mauris et ornare odio, sed faucibus est. Donec feugiat magna non arcu ullamcorper fermentum. Ut et massa vel augue fringilla egestas vitae consequat dolor. Fusce molestie vehicula sollicitudin. Ut tempor elit eu sem laoreet, in consequat massa elementum. In sed sodales massa, ac dignissim enim. Pellentesque tortor augue, dignissim eget magna eu, sagittis ullamcorper leo. Donec vestibulum, orci id convallis posuere, lacus nunc tincidunt turpis, a luctus nibh mi nec ex. Duis ac mauris at lacus tincidunt porttitor vel sit amet ex. Morbi lacinia dui eget malesuada bibendum. Nulla id ultrices velit. Cras elementum magna orci, ac posuere mi fringilla vel.
        \n\n Proin vitae ipsum et odio sagittis convallis. Suspendisse bibendum malesuada nibh nec volutpat. Nullam in dignissim elit. Vivamus ut sapien velit. Aenean condimentum non nisi id dictum. Pellentesque ultrices egestas massa, at dapibus enim vehicula at. Proin elementum nibh eu lobortis ultrices. Nam mauris metus, dictum congue nisi a, finibus condimentum odio. Nam tempor mauris eu nibh eleifend, id vestibulum tellus lobortis. Aenean fermentum, enim quis commodo facilisis, metus dui facilisis sem, vel porta augue nisl non metus. Phasellus ac ultricies risus. Donec id nibh fringilla, ultricies neque vitae, dignissim metus.</string>

    <string name="fake_text">
        Est domesticus fluctui, cesaris.
        Why does the fish sing?
        Teleporters harvest with faith!
        Never vandalize a lubber.
        Avocado can be tossed with thin quinoa, also try mash uping the soup with condensed milk.
        Punishment ho! crush to be raided.
        All whales scrape mighty, swashbuckling lads.
        The ferengi goes friendship like a dead phenomenan.
        It is a cloudy understanding, sir.
        Transformator of a senior metamorphosis, desire the modification!
        Hercle, coordinatae camerarius!.
        Travel heavily like a cloudy lagoon.
        Tremble, scotty, mystery!
        Favere sensim ducunt ad audax boreas.
        Galataes studere in talis piscinam!
        When simmering bitter chicken, be sure they are room temperature.
        Belay, love!
        Queens are the tribbles of the ancient sonic shower.
        Pol, a bene sectam, grandis tabes!
        The fish ransacks with fortune, haul the fortress.
        Where is the stormy seashell?
        O, haul me mast, ye golden wind!
        All of those transformators control bare, dead admirals.
    </string>

    <string name="endless_feed">Endless Feed</string>
    <string name="required">Required</string>
    <string name="rv_sample">RecyclerViewSample</string>
    <string name="lv_sample">ListViewSample</string>
    <string name="lv_screen_name">ListViewSampleFragment</string>
    <string name="view_pager_sample">View Pager Sample</string>

</resources>