<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/xml_sample"
            android:checked="true"
            android:title="@string/drawer_item_title_xml_sample" />
        <item
            android:id="@+id/dynamic_sample"
            android:title="@string/drawer_item_title_dynamic_sample" />
        <item
            android:id="@+id/configurable_page"
            android:title="@string/drawer_item_title_configurable_page" />

        <item
            android:id="@+id/endless_feed_sample"
            android:title="@string/endless_feed" />

        <item
            android:id="@+id/rv_sample"
            android:title="@string/rv_sample" />

        <item
            android:id="@+id/lv_sample"
            android:title="@string/lv_sample" />
    </group>

</menu>