<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/tools">

    <data>

        <import type="android.widget.EditText" />

        <import type="java.util.List" />

        <variable
            name="properties"
            type="com.taboola.taboolasample.Properties" />

        <variable
            name="requiredFields"
            type="java.util.List&lt;android.widget.EditText&gt;" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/dialog_publisher_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_publisher"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:maxLines="1"
                    android:text="@={properties.publisher}"
                    custom:required="@{true}"
                    custom:requiredFieldsList="@{requiredFields}" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/dialog_mode_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_mode"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:maxLines="1"
                    android:text="@={properties.mode}"
                    custom:required="@{true}"
                    custom:requiredFieldsList="@{requiredFields}" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/dialog_placement_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_placement"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:maxLines="1"
                    android:text="@={properties.placement}"
                    custom:required="@{true}"
                    custom:requiredFieldsList="@{requiredFields}" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/dialog_page_type_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_page_type"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:maxLines="1"
                    custom:required="@{true}"
                    custom:requiredFieldsList="@{requiredFields}"
                    android:text="@={properties.pageType}" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/dialog_page_url_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_page_url"
                    android:imeOptions="actionNext"
                    android:inputType="textUri"
                    android:maxLines="1"
                    custom:required="@{true}"
                    custom:requiredFieldsList="@{requiredFields}"
                    android:text="@={properties.pageUrl}" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/dialog_target_type_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_target_type"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:maxLines="1"
                    android:text="@={properties.targetType}" />
            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/dialog_referrer_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_referrer"
                    android:imeOptions="actionNext"
                    android:inputType="textUri"
                    android:maxLines="1"
                    android:text="@={properties.referrer}" />
            </android.support.design.widget.TextInputLayout>


            <android.support.v7.widget.AppCompatCheckBox
                android:id="@+id/ctv_scroll_enabled"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="@={properties.shouldScroll}"
                android:gravity="center"
                android:imeOptions="actionNext"
                android:padding="4dp"
                android:text="@string/prompt_scroll_enabled"
                android:textSize="18sp" />

            <android.support.v7.widget.AppCompatCheckBox
                android:id="@+id/ctv_auto_resize_height"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="@={properties.shouldAutoResizeHeight}"
                android:gravity="center"
                android:imeOptions="actionDone"
                android:padding="4dp"
                android:text="@string/prompt_auto_resize_height"
                android:textSize="18sp" />


        </LinearLayout>
    </ScrollView>
</layout>
